docs: understand data better